--- a/app/src/main/res/layout/nav_row.xml
+++ b/app/src/main/res/layout/nav_row.xml
@@ -7,10 +7,10 @@
 
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="@dimen/nav_drawer_icon"
         android:layout_height="@dimen/nav_drawer_icon"
-        android:layout_gravity="center_vertical"
-        android:id="@+id/imageView"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginLeft="16dp" />
 
     <TextView
