--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,44 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="305dp"
+    android:layout_height="match_parent"
+    android:layout_gravity="start">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/drawerBackground"
     android:orientation="vertical"
+    android:clickable="true"
     tools:context=".NavigationDrawerFragment" >
 
     <!-- Header profile part -->
-    <ImageView
-        android:id="@+id/nav_image"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:padding="12dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/account"/>
-
     <LinearLayout
         android:id="@+id/profile_layout"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
-
-        <!--<RelativeLayout
-            android:id="@+id/text_view_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue"
-            android:gravity="center_vertical">-->
 
         <TextView
             android:id="@+id/nav_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:layout_alignParentTop="true"
             android:textColor="@color/theGray"
             android:textStyle="bold"
-            android:paddingBottom="7dp"
             android:text="Griffin Smalley"/>
 
         <TextView
@@ -46,13 +36,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/theGray"
-            android:layout_below="@+id/nav_user_name"
             android:textSize="14sp"
             android:text="k13gs03@kzoo.edu" />
 
-        <!--</RelativeLayout>-->
-
     </LinearLayout>
+
 
     <!-- divider -->
     <View
@@ -69,6 +57,7 @@
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:divider="@null"
+        android:layout_weight="1"
         android:background="@color/drawerBackground" />
 
     <!-- Settings and Support ListView -->
@@ -85,6 +74,9 @@
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:divider="@null"
+        android:layout_marginBottom="20dp"
         android:background="@color/drawerBackground" />
 
 </LinearLayout>
+
+    </FrameLayout>
