Majorly refactored the nav drawer and cleaned up some code

--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -4,4 +4,4 @@
     style="@style/NavDrawer"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
+    class="com.techhab.collegeapp.NavigationDrawerFragment" />
