--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,12 +28,12 @@
         <item name="colorPrimaryDark">@color/OrangeRed</item>
         <item name="colorAccent">@color/kzooOrange</item>
         <item name="windowActionBar">false</item>
-        <!--<item name="drawerArrowStyle">@style/Theme.KZOO.DrawerArrowStyle</item>-->
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:fitsSystemWindows">true</item>
     </style>
 
-    <style name="Theme.KZOO.DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
-        <item name="spinBars">true</item>
+    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">false</item>
         <item name="color">@android:color/white</item>
     </style>
 
