--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -43,6 +43,8 @@
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="ButtonFlatMaterial" parent="android:Widget.Material.Button.Borderless" />
+    <style name="MaterialButtonFlat" parent="android:Widget.Material.Button.Borderless" />
+
+    <style name="MaterialButton" parent="android:Widget.Material.Button" />
 
 </resources>
