--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="windowActionBar">false</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:fitsSystemWindows">true</item>
+        <!--<item name="android:buttonStyle">@style/MaterialButton</item>-->
     </style>
 
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
@@ -51,36 +52,50 @@
         <item name="android:layout_marginRight">@dimen/nav_drawer_margin_offset</item>
     </style>
 
-    <style name="Theme.NeutralSwitchStyle" parent="Theme.KZOO">
+    <!--<style name="Theme.NeutralSwitchStyle" parent="Theme.KZOO">
         <item name="colorControlActivated">@color/white</item>
+    </style>-->
+
+    <style name="Theme.NeutralSwitchStyle" parent="Theme.KZOO">
+        <item name="colorAccent">@color/kzooOrange</item>
     </style>
-    <!-- android:textColorPrimary is the  color of the title text
-             in the Toolbar, in the Theme.AppCompat theme:  -->
-    <!--<item name="android:textColorPrimary">@color/abc_primary_text_material_light</item>-->
-
-    <!-- android:textColorPrimaryInverse is the  color of the title
-         text in the Toolbar, in the Theme.AppCompat.Light theme:  -->
-    <!-- <item name="android:textColorPrimaryInverse">@color/abc_primary_text_material_light</item> -->
-
-    <!-- android:actionMenuTextColor is the color of the text of
-          action (menu) rssItemList in the Toolbar, at least in the
-          Theme.AppCompat theme.
-          For some reason, they already get the textColorPrimary
-          when running on API 21, but not on older versions of
-          Android, so this is only necessary to support older
-          Android versions.-->
-    <!--<item name="actionMenuTextColor">@color/abc_primary_text_material_light</item>-->
-
-
-    <!-- This would set the toolbar's background color,
-          but setting this also changes the popup menu's background,
-          even if we define popupTheme for our <Toolbar> -->
-    <!-- <item name="android:background">@color/color_primary</item> -->
 
     <style name="CardTitle">
         <item name="android:textColor">@color/primary_text_default_material_light</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="CardSubtitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:alpha">0.75</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="MaterialButtonFlat">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:minWidth">88dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:background">@drawable/material_button_flat</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="MaterialButton" parent="@android:style/Widget.Button">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:minWidth">88dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_marginTop">6dp</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/material_button</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
     </style>
 
 </resources>
