--- a/app/src/main/res/layout/fragment_academic_term.xml
+++ b/app/src/main/res/layout/fragment_academic_term.xml
@@ -8,6 +8,6 @@
     <TableLayout
         android:id="@+id/table_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </ScrollView>
