--- a/app/src/main/res/layout/fragment_basketball.xml
+++ b/app/src/main/res/layout/fragment_basketball.xml
@@ -224,6 +224,7 @@
                 <Button
                     style="@style/MaterialButtonFlat"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/kzooOrange"
                     android:text="@string/view_more"/>
 
