--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -20,13 +20,18 @@
                 android:background="@color/green"
                 android:padding="10dp"
                 android:layout_height="wrap_content">
-                <TextView android:id="@+id/fragment_cafeteria_tvInfo"
+                <TextView android:id="@+id/fragment_cafeteria_tvInfo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:textColor="@color/white"
-                    android:text="Open for 1 more hour, util 11:30 am"
-                    android:drawablePadding="3dp"
+                    android:text="Open"/>
+                <TextView android:id="@+id/fragment_cafeteria_tvInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:text="till 11am"
                     android:drawableRight="@drawable/icon_arrow_expand_drawer"/>
                 <TextView android:id="@+id/fragment_cafeteria_tvTimeDetail"
                     android:layout_width="wrap_content"
