--- a/app/src/main/res/menu/menu_maps.xml
+++ b/app/src/main/res/menu/menu_maps.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="all">
+    <group>
     <item
-        android:id="@+id/action_academic_buildings"
-        android:title="@string/title_action_academic_buildings" />
+        android:id="@+id/action_buildings_select"
+        android:title="@string/title_buildings_select" />
     <item
         android:id="@+id/action_residential_halls"
         android:title="@string/title_action_residential_halls" />
