--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,8 +61,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:weightSum="2"
-                android:padding="8dp" >
+                android:weightSum="2" >
 
                 <TableRow
                     android:layout_width="fill_parent"
