Beginning redesign with Griffin

--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -14,31 +14,54 @@
             android:layout_height="wrap_content"
             android:showDividers="middle"
             android:divider="?android:dividerHorizontal">
+
             <LinearLayout android:id="@+id/fragment_careteria_llHeader"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:background="@color/green"
-                android:padding="10dp"
                 android:layout_height="wrap_content">
-                <TextView android:id="@+id/fragment_cafeteria_tvInfo1"
+               <!-- <TextView android:id="@+id/fragment_cafeteria_tvInfo1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:textColor="@color/white"
-                    android:text="Open"/>
-                <TextView android:id="@+id/fragment_cafeteria_tvInfo"
-                    android:layout_width="match_parent"
+                    android:text="@string/open"/>-->
+                <FrameLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:textColor="@color/white"
-                    android:text="till 11am"
-                    android:drawableRight="@drawable/icon_arrow_expand_drawer"/>
+                    android:background="@color/OpenGreen">
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_margin="5dp"
+                        android:src="@drawable/open_sign"/>
+
+                    </FrameLayout>
+
+                <TextView android:id="@+id/fragment_cafeteria_tvInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@color/abc_secondary_text_material_dark"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center_vertical"
+                    android:text="Closes in 2 hours"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:layout_gravity="right|center"
+                    android:src="@drawable/ic_action_expand"/>
+
                 <TextView android:id="@+id/fragment_cafeteria_tvTimeDetail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:textSize="18dp"
-                    android:paddingTop="5dp"
+                    android:paddingTop="4dp"
                     android:textColor="@color/white"
                     android:text="M-F 8:00-10:00pm\nSaturdays 12:00-6:00pm\nSundays 10-7pm"/>
 
