--- a/app/src/main/res/menu/menu_athletic.xml
+++ b/app/src/main/res/menu/menu_athletic.xml
@@ -1,4 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Temporary menu to reset sharedpreferences related to this activity -->
     <item android:id="@+id/action_reset_shared_prefs"
         android:title="@string/action_reset_shared_prefs"
