--- a/app/src/main/res/layout/food_wells_menu_item.xml
+++ b/app/src/main/res/layout/food_wells_menu_item.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.CardView
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    style="@style/CardView">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        style="@style/CardView">
+        android:orientation="vertical">
+
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/menu_item_tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lunch"
                 style="@style/CardTitle"/>
+
             <TextView android:id="@+id/fragment_cafeteria_tvMainLine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -24,12 +30,13 @@
                 android:paddingBottom="5dp"
                 android:text="Main Line"
                 android:textColor="@color/secondary_text_default_material_light"/>
+
             <LinearLayout android:id="@+id/fragment_cafeteria_llMainLine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:orientation="vertical">
-            </LinearLayout>
+                android:orientation="vertical" />
+
             <TextView android:id="@+id/fragment_cafeteria_tvInternationalCorner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,29 +44,28 @@
                 android:paddingBottom="5dp"
                 android:text="International Corner"
                 android:textColor="@color/secondary_text_default_material_light"/>
+
             <LinearLayout android:id="@+id/fragment_cafeteria_llInternationalCorner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:orientation="vertical"/>
 
-            <View android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black"/>
+            </LinearLayout>
+
+            <include layout="@layout/card_divider" />
+
             <ToggleButton android:id="@+id/fragment_cafeteria_tbViewMore"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
                 android:textOff="View More"
                 android:textOn="View Less"
-                android:background="@null"
                 style="@style/MaterialButtonFlat"
                 android:textColor="@color/kzooOrange"
-                android:gravity="right"/>
-
+                android:layout_gravity="right|center_vertical" />
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
-</LinearLayout>
+
+</android.support.v7.widget.CardView>
