updated Richardson fragment
updated Richardson fragment

--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -50,6 +50,7 @@
                     android:text="Closes in 2 hours"/>
 
                 <ImageButton
+                    android:id="@+id/fragment_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
