--- a/app/src/main/res/layout/fragment_basketball.xml
+++ b/app/src/main/res/layout/fragment_basketball.xml
@@ -4,11 +4,19 @@
     android:id="@+id/basketball_fragment_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:overScrollMode="never"
     tools:context="com.techhab.collegeapp.BasketballFragment">
+    <!--android:layout_marginTop="@dimen/abc_action_bar_default_height_material"-->
 
     <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+        <View xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:minHeight="?attr/actionBarSize" />
 
         <!-- Game In Progress card -->
         <android.support.v7.widget.CardView
