--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -27,58 +27,56 @@
                 android:orientation="vertical">
 
 
+                <FrameLayout
+                    android:id="@+id/toolbar_and_gender_switch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
 
-            <!--<FrameLayout
-                android:id="@+id/toolbar_and_gender_switch"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">-->
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/abc_action_bar_default_height_material"
+                        android:minHeight="@dimen/abc_action_bar_default_height_material"
+                        app:theme="@style/Toolbar"
+                        app:popupTheme="@style/Theme.AppCompat.Light"
+                        />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/abc_action_bar_default_height_material"
-                    android:minHeight="@dimen/abc_action_bar_default_height_material"
-                    android:background="@color/red"
-                    app:theme="@style/Toolbar"
-                    app:popupTheme="@style/Theme.AppCompat.Light"
-                    />
-
-                <LinearLayout
-                    android:id="@+id/gender_switch_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="10dp"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/men_text"
+                    <LinearLayout
+                        android:id="@+id/gender_switch_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:text="@string/men"/>
+                        android:orientation="horizontal"
+                        android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="10dp">
 
-                    <android.support.v7.widget.SwitchCompat
-                        android:id="@+id/gender_switch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="3dp"
-                        android:layout_marginLeft="3dp"
-                        app:showText="false"/>
+                        <TextView
+                            android:id="@+id/men_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:text="@string/men"/>
 
-                    <TextView
-                        android:id="@+id/women_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:text="@string/women"/>
+                        <android.support.v7.widget.SwitchCompat
+                            android:id="@+id/gender_switch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="3dp"
+                            android:layout_marginLeft="3dp"
+                            app:showText="false"/>
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/women_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:text="@string/women"/>
 
+                        </LinearLayout>
+
+                    </FrameLayout>
 
             <com.techhab.collegeapp.PagerSlidingTabStrip
                 android:id="@+id/tabs"
@@ -89,8 +87,6 @@
                 android:fillViewport="true"
                 android:clipToPadding="false"
                 app:pstsPaddingMiddle="true" />
-
-        <!--</FrameLayout>-->
 
 
             </LinearLayout>
