--- a/app/src/main/res/layout/upcoming_games_row.xml
+++ b/app/src/main/res/layout/upcoming_games_row.xml
@@ -18,14 +18,14 @@
             android:id="@+id/opponent_logo"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/western_michigan_broncos" />
+            android:src="@drawable/western_michigan_broncos"/>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/opponent_title"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="@color/primary_text_default_material_light"
-                android:text="vs. Western Michigan University" />
+                android:text="Western Mich." />
 
             <TextView
                 android:id="@+id/game_date"
@@ -44,6 +44,16 @@
                 />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/home_away"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/secondary_text_default_material_light"
+            android:alpha="0.75"
+            android:textStyle="bold"
+            android:gravity="center_vertical|right"
+            android:text="AWAY"/>
 
     </LinearLayout>
 
