--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -11,12 +11,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <FrameLayout
+            android:id="@+id/header"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/kzooOrange">
 
-            <include
+            <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/abc_action_bar_default_height_material"
+                android:minHeight="@dimen/abc_action_bar_default_height_material"
+                app:theme="@style/Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light" />
 
             <com.techhab.collegeapp.PagerSlidingTabStrip
                 android:id="@+id/tabs"
@@ -25,6 +33,7 @@
                 android:layout_gravity="bottom"
                 android:scrollbars="none"
                 android:fillViewport="true"
+                android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
                 app:pstsPaddingMiddle="false"
                 app:pstsShouldExpand="true" />
 
