--- a/app/src/main/res/layout/fragment_basketball.xml
+++ b/app/src/main/res/layout/fragment_basketball.xml
@@ -1,7 +1,7 @@
 <com.techhab.collegeapp.ObservableScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/basketball_fragment_scrollview"
+    android:id="@+id/scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
@@ -10,8 +10,8 @@
     <!--android:layout_marginTop="@dimen/abc_action_bar_default_height_material"-->
 
     <LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <View xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -506,6 +506,7 @@
                 <include layout="@layout/card_divider" />
 
                 <LinearLayout
+                    android:id="@+id/results_card_footer"
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:gravity="right|center_vertical"
