--- a/kcollegecustomviews/src/main/res/drawable/custom_progress_bar_horizontal.xml
+++ b/kcollegecustomviews/src/main/res/drawable/custom_progress_bar_horizontal.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<layer-list
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@android:id/background">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background" >
         <shape>
-            <padding
-                android:bottom="3dip"
-                android:top="3dip"
-                android:left="3dip"
-                android:right="3dip"
-                />
-            <corners
-                android:radius="5dip" />
+            <!--<padding
+                android:bottom="2dip"
+                android:top="2dip"
+                android:left="2dip"
+                android:right="2dip" />-->
+            <corners android:radius="5dip" />
             <gradient
                 android:startColor="#2a2b2f"
                 android:centerColor="#2a2b2f"
@@ -20,12 +16,10 @@
                 android:angle="270" />
         </shape>
     </item>
-    <item
-        android:id="@android:id/progress">
+    <item android:id="@android:id/progress" >
         <clip>
             <shape>
-                <corners
-                    android:radius="5dip" />
+                <corners android:radius="5dip" />
                 <gradient
                     android:startColor="@color/main21"
                     android:endColor="@color/main00"
